# mlops-demo

./: .dvcignore  .example_env  .gitignore  .gitlab-ci.yml  Makefile  README.md  docker-compose.yaml  dvc.yaml  params.json  pyproject.toml  requirements.txt  setup.py
.dvc/: config
.snakemake/metadata/: ZGF0YS9pbnRlcmltL2NsZWFuZWQuY3N2  ZGF0YS9pbnRlcmltL2ludGVyaW1fdGVzdC5jc3Y=  ZGF0YS9pbnRlcmltL2ludGVyaW1fdHJhaW4uY3N2  ZGF0YS9wcm9jZXNzZWQvcHJvY2Vzc2VkX3Rlc3QuY3N2  ZGF0YS9wcm9jZXNzZWQvcHJvY2Vzc2VkX3RyYWluLmNzdg==  bW9kZWxzL3Jmb3Jlc3QucGts  cmVwb3J0cy9maWd1cmVzL3Jmb3Jlc3QucGtsLnBuZw==
Docker/fastapi_model_service/: Dockerfile  pyproject.toml
Docker/fastapi_model_service/app/: inference.py  model.py
data/interim/: cleaned.csv  interim_test.csv  interim_train.csv
data/processed/: processed_test.csv  processed_train.csv
data/raw/: googleplaystore.csv.dvc  googleplaystore_user_reviews.csv.dvc
docs/: Makefile  conf.py  index.rst  make.bat
mlruns/0/137627b0d50a4fa09860bbae9209577e/: meta.yaml
mlruns/0/25be394451124fd68746beae51ff42f1/: meta.yaml
mlruns/0/4cea3dd171a244d6b896e44576e30994/: meta.yaml
mlruns/0/bcc29a0429664cc88bac7f2837b20313/: meta.yaml
models/: .gitignore
notebooks/: data_exploration.ipynb
src/: __init__.py  params_file.py
src/app/: inference.py
src/data/: drop_columns.py  split.py
src/features/: clean_features.py
src/models/: evaluate_model.py  predict_model.py  train_model.py
src/utility/: processing.py  wrappers.py
tests/: test_clean_features.py  test_drop_columns.py  test_split.py
workflow/: Snakefile
(+29 files in other folders)
