[tool.poetry]
name = "google_playstore_ratings"
version = "0.1.0"
description = "Prediction of google playstore app rating using mlops techniques"
authors = ["rafa <rkchelebiev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"
sklearn = "^0.0"
black = "^22.3.0"
flake8 = "^4.0.1"
click = "^8.1.3"
snakemake = "^7.6.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
